# cfsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  library.json  library.properties
.github/workflows/: arduino-lib-mgr-lint.yml  cmake-single-platform.yml
doc/: CMakeLists.txt  cfsmDoxlayout.xml  cfsm_context.puml  cfsm_statepattern.puml  cfsm_transition.puml  header.html  mario_classdiagram.puml  mario_states.puml  stylesheet.css
examples/CfsmBlink/: CfsmBlink.ino
examples/UnoBlink/: README.md  platformio.ini
examples/UnoBlink/doc/: BlinkClass.puml  BlinkOffToOn.puml  BlinkOnToOff.puml  BlinkSetup.puml  BlinkState.puml
examples/UnoBlink/src/: blinkdata.h  main.cpp
examples/UnoBlink/src/states/: OffState.cpp  OffState.h  OnState.cpp  OnState.h
examples/mario/: main.c  mario.c
examples/mario/states/: cape_mario.c  cape_mario.h  dead_mario.c  dead_mario.h  fire_mario.c  fire_mario.h  small_mario.c  small_mario.h  super_mario.c  super_mario.h
src/: CMakeLists.txt  c_fsm.c  c_fsm.h
src/c_fsm/: c_fsm.c  c_fsm.h
src/example/: main.c  mario.c  mario.h
src/example/states/: cape_mario.c  dead_mario.c  fire_mario.c  small_mario.c  small_mario.h  super_mario.c
tests/: CMakeLists.txt  test_c_fsm.c
tests/Unity-2.5.2/: CMakeLists.txt
